--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,15 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.9.1</version>
+                <configuration>
+                    <tags>
+                        <tag>
+                            <name>date</name>
+                            <!-- The value X makes javadoc ignoring the tag -->
+                            <placement>X</placement>
+                        </tag>
+                    </tags>
+                </configuration>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
