--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 
 target/
 
+##### NETBEANS
+
 nbproject/private/
 build/
 nbbuild/
@@ -15,34 +17,32 @@ nbdist/
 nbactions.xml
 nb-configuration.xml
 
+##### ECLIPSE 
+
 
 *.pydevproject
+.project
 .metadata
-.gradle
-bin/
-tmp/
+bin/**
+tmp/**
+tmp/**/*
 *.tmp
 *.bak
 *.swp
 *~.nib
 local.properties
+.classpath
 .settings/
 .loadpath
-
+/src/main/resources/rebel.xml
 # External tool builders
 .externalToolBuilders/
-
+ 
 # Locally stored "Eclipse launch configurations"
 *.launch
-
+ 
 # CDT-specific
 .cproject
-
+ 
 # PDT-specific
 .buildpath
-
-# sbteclipse plugin 
-.target
-
-# TeXlipse plugin
-.texlipse
