--- a/pom.xml
+++ b/pom.xml
@@ -195,5 +195,10 @@
     </developers>
     
     <dependencies>
+        <dependency>
+    <groupId>it.unitn.disi.sweb.nlp.model</groupId>
+    <artifactId>nltext</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
