--- a/pom.xml
+++ b/pom.xml
@@ -196,9 +196,9 @@
     
     <dependencies>
         <dependency>
-    <groupId>it.unitn.disi.sweb.nlp.model</groupId>
-    <artifactId>nltext</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>it.unitn.disi.sweb</groupId>
+            <artifactId>sweb-nlp-model</artifactId>    
+            <version>2.5.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
