--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>eu.trentorise.opendata</groupId>
-    <artifactId>api</artifactId>
+    <artifactId>openentity-api</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>OpenDataApi</name>
+    <name>OpenEntityApi</name>
     <url>https://github.com/opendatatrentino/Jackan</url>
 
     <parent>
@@ -181,14 +181,14 @@
     </build>
 
     <scm>
-        <url>git@github.com:opendatatrentino/open-data-api.git</url>
-        <connection>scm:git:git@github.com:opendatatrentino/open-data-api.git</connection>
-        <developerConnection>scm:git:git@github.com:opendatatrentino/open-data-api.git</developerConnection>
+        <url>git@github.com:opendatatrentino/openentity-api.git</url>
+        <connection>scm:git:git@github.com:opendatatrentino/openentity-api.git</connection>
+        <developerConnection>scm:git:git@github.com:opendatatrentino/openentity-api.git</developerConnection>
     </scm>
     
     <issueManagement>
         <system>Github</system>
-        <url>https://github.com/opendatatrentino/open-data-api/issues</url>
+        <url>https://github.com/opendatatrentino/openentity-api/issues</url>
     </issueManagement>    
     
     <description>Api to access semantic services of open data in trentino project </description>
@@ -212,8 +212,8 @@
         <developer>
             <id>d.leoni</id>
             <name>David Leoni</name>
-            <email>david.leoni@trentorise.eu</email>
-            <organization>Trento Rise</organization>
+            <email>david.leoni@unitn.it</email>
+            <organization>DISI, University of Trento</organization>
         </developer>                      
         
         <developer>
@@ -222,6 +222,14 @@
             <email>a.zanella@trentorise.eu</email>
             <organization>Trento Rise</organization>
         </developer>
+        
+        <developer>
+            <id>i.tankoyeu</id>
+            <name>Ivan Tankoyeu</name>
+            <email>tankoyeui@disi.unitn.it</email>
+            <organization>DISI, University of Trento</organization>
+        </developer>
+        
     </developers>
     
     <dependencies>
