--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>eu.trentorise.opendata</groupId>
     <artifactId>openentity-api</artifactId>
-    <version>0.6.0-SNAPSHOT</version>
+    <version>0.7.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>OpenEntityApi</name>
@@ -238,5 +238,19 @@
             <artifactId>sweb-nlp-model</artifactId>    
             <version>2.5.0-SNAPSHOT</version>
         </dependency>
+        
+    <dependency>
+        <groupId>com.google.code.findbugs</groupId>
+        <artifactId>jsr305</artifactId>
+        <version>2.0.1</version>
+    </dependency>
+    <dependency>
+        <groupId>com.google.code.findbugs</groupId>
+        <artifactId>annotations</artifactId>
+        <version>2.0.1</version>
+    </dependency> 
+            
     </dependencies>
+    
+   
 </project>
