--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,16 @@
 
 target/
 
+
+##### INTELLIJ
+
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dataSources.ids
+.idea/dataSources.xml
+.idea/sqlDataSources.xml
+.idea/dynamic.xml
+
 ##### NETBEANS
 
 nbproject/private/
