--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>eu.trentorise.opendata</groupId>
     <artifactId>openentity-api</artifactId>
-    <version>0.23.0-SNAPSHOT</version>
+    <version>0.24.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>OpenEntityApi</name>
@@ -276,6 +276,13 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+        
+        <dependency>        
+            <groupId>eu.trentorise.opendata</groupId>
+            <artifactId>traceprov</artifactId>
+            <version>0.1.0-SNAPSHOT</version>
+        </dependency>
+        
     </dependencies>
     
    
