--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>eu.trentorise.opendata</groupId>
     <artifactId>openentity-api</artifactId>
-    <version>0.26.0-SNAPSHOT</version>
+    <version>0.27.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>OpenEntityApi</name>
@@ -282,6 +282,12 @@
             <artifactId>traceprov</artifactId>
             <version>0.2.0-SNAPSHOT</version>
         </dependency>
+        
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>13.0</version>
+        </dependency>        
         
     </dependencies>
     
