--- a/pom.xml
+++ b/pom.xml
@@ -119,15 +119,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.9.1</version>
-                <configuration>
-                    <tags>
-                        <tag>
-                            <name>date</name>
-                            <!-- The value X makes javadoc ignoring the tag -->
-                            <placement>X</placement>
-                        </tag>
-                    </tags>
-                </configuration>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -280,8 +271,14 @@
         <dependency>        
             <groupId>eu.trentorise.opendata</groupId>
             <artifactId>traceprov</artifactId>
-            <version>0.2.0-SNAPSHOT</version>
+            <version>0.3.0-SNAPSHOT</version>
         </dependency>
+        
+        <dependency>        
+            <groupId>eu.trentorise.opendata.semantics.nlp</groupId>
+            <artifactId>semtext-model</artifactId>
+            <version>0.27.0-SNAPSHOT</version>
+        </dependency>        
         
     </dependencies>
     
