--- a/pom.xml
+++ b/pom.xml
@@ -280,7 +280,7 @@
         <dependency>        
             <groupId>eu.trentorise.opendata</groupId>
             <artifactId>traceprov</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <version>0.1.0</version>
         </dependency>
         
     </dependencies>
