--- a/pom.xml
+++ b/pom.xml
@@ -2,23 +2,21 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     
     <!--  
-    /**
-    * *****************************************************************************
-    * Copyright 2013-2014 Trento Rise (www.trentorise.eu/)
-    *
-    * All rights reserved. This program and the accompanying materials are made
-    * available under the terms of the GNU Lesser General Public License (LGPL)
-    * version 2.1 which accompanies this distribution, and is available at
-    *
-    * http://www.gnu.org/licenses/lgpl-2.1.html
-    *
-    * This library is distributed in the hope that it will be useful, but WITHOUT
-    * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
-    * FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more
-    * details.
-    *
-    *******************************************************************************
-    */    
+        /* 
+         * Copyright 2015 TrentoRISE   (trentorise.eu).
+         *
+         * Licensed under the Apache License, Version 2.0 (the "License");
+         * you may not use this file except in compliance with the License.
+         * You may obtain a copy of the License at
+         *
+         *      http://www.apache.org/licenses/LICENSE-2.0
+         *
+         * Unless required by applicable law or agreed to in writing, software
+         * distributed under the License is distributed on an "AS IS" BASIS,
+         * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+         * See the License for the specific language governing permissions and
+         * limitations under the License.
+         */
     -->    
     
     <modelVersion>4.0.0</modelVersion>
@@ -32,10 +30,10 @@
     <url>https://github.com/opendatatrentino/openentity-api/</url>
 
     <parent>
-        <groupId>org.sonatype.oss</groupId>
-        <artifactId>oss-parent</artifactId>
-        <version>7</version>
-    </parent>
+        <groupId>eu.trentorise.opendata.commons</groupId>
+        <artifactId>odt-super-pom</artifactId>
+        <version>1.2.0</version>
+    </parent>  
 
     <licenses>
         <license>
@@ -48,6 +46,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <netbeans.hint.license>apache20</netbeans.hint.license>
     </properties>
     
 
