--- a/pom.xml
+++ b/pom.xml
@@ -26,187 +26,26 @@
     <version>0.27.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>OpenEntityApi</name>
-    <url>https://github.com/opendatatrentino/openentity-api/</url>
+    <name>OpenEntity Api</name>
+    <url>https://github.com/opendatatrentino/openentity-api</url>
+    <description>Api to access semantic services of open data in trentino project </description>
+
 
     <parent>
         <groupId>eu.trentorise.opendata.commons</groupId>
         <artifactId>odt-super-pom</artifactId>
-        <version>1.2.0</version>
+        <version>1.3.0-SNAPSHOT</version>
     </parent>  
 
-    <licenses>
-        <license>
-            <name>GNU Lesser General Public License, Version 2.1</name>
-            <url>http://www.gnu.org/licenses/lgpl-2.1.txt</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <netbeans.hint.license>apache20</netbeans.hint.license>
-    </properties>
-    
-
-    <profiles>
-        <profile>
-            <id>release-sign-artifacts</id>
-            <activation>
-                <property>
-                    <name>performRelease</name>
-                    <value>true</value>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.1</version>
-                        <executions>
-                            <execution>
-                                <id>sign-artifacts</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>sign</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>    
-
-
-    <repositories>   
-        <!--        
-        <repository>
-            <id>sweb-internal</id>
-            <layout>default</layout>
-            <name>Archiva Managed Internal Repository</name>
-            <url>https://sweb.science.unitn.it/archiva/repository/internal</url>
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>never</updatePolicy>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>sweb-snapshots</id>
-            <name>Archiva Managed Snapshot Repository</name>
-            <url>https://sweb.science.unitn.it/archiva/repository/snapshots</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-                <updatePolicy>never</updatePolicy>
-            </snapshots>
-        </repository>           
-        
-        -->     
-    </repositories>
-    
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9.1</version>
-                <executions>
-                    <execution>
-                        <id>attach-javadocs</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>2.2.1</version>
-                <configuration>
-                    <attach>true</attach>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
-                </configuration>
-            </plugin>
-            
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>animal-sniffer-maven-plugin</artifactId>
-                <version>1.9</version>
-             
-                <configuration>          
-                    <signature>
-                        <groupId>org.codehaus.mojo.signature</groupId>
-                        <artifactId>java16</artifactId>
-                        <version>1.1</version>
-                    </signature>                  
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>checkJavaApiSignature</id>
-                        <phase>verify</phase>        
-                        <goals>
-                            <goal>check</goal>
-                        </goals>        
-                    </execution>        
-                </executions>
-            </plugin>                      
-        </plugins>      
-
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-release-plugin</artifactId>
-                    <version>2.1</version>
-                    <configuration>
-                        <mavenExecutorId>forked-path</mavenExecutorId>
-                        <useReleaseProfile>false</useReleaseProfile>
-                        <arguments>${arguments} -Psonatype-oss-release</arguments>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>      
-                  
-    </build>
-
+    <!-- better to copy scm, see https://github.com/opendatatrentino/odt-super-pom/issues/1 -->    
     <scm>
-        <url>git@github.com:opendatatrentino/openentity-api.git</url>
-        <connection>scm:git:git@github.com:opendatatrentino/openentity-api.git</connection>
-        <developerConnection>scm:git:git@github.com:opendatatrentino/openentity-api.git</developerConnection>
-    </scm>
-    
-    <issueManagement>
-        <system>Github</system>
-        <url>https://github.com/opendatatrentino/openentity-api/issues</url>
-    </issueManagement>    
-    
-    <description>Api to access semantic services of open data in trentino project </description>
+        <url>${project.url}</url>
+        <connection>scm:git:${project.url}.git</connection>
+        <developerConnection>scm:git:${project.url}.git</developerConnection>  
+        <tag>HEAD</tag>
+    </scm>   
+
 
     <developers>
 
@@ -246,26 +85,56 @@
         </developer>
         
     </developers>
+
+    <build>
+        <plugins>
+                                                                     
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>              
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>animal-sniffer-maven-plugin</artifactId>
+            </plugin>               
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>buildnumber-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+            </plugin>            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+            </plugin>                
+            <plugin>
+                <groupId>eu.trentorise.opendata.josman</groupId>
+                <artifactId>josman-maven-plugin</artifactId>              
+            </plugin>    
+            <plugin>
+                <groupId>com.github.github</groupId>
+                <artifactId>site-maven-plugin</artifactId>
+            </plugin>  
+        </plugins>
+              
+    </build>
+   
+
     
     <dependencies>
         
         <dependency>
-            <groupId>com.google.code.findbugs</groupId>
-            <artifactId>jsr305</artifactId>
-            <version>2.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.findbugs</groupId>
-            <artifactId>annotations</artifactId>
-            <version>2.0.1</version>
-        </dependency> 
-            
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
+            <groupId>org.immutables</groupId>
+            <artifactId>value</artifactId>            
+            <scope>provided</scope>
+            <optional>true</optional>
+        </dependency>    
         
         <dependency>        
             <groupId>eu.trentorise.opendata</groupId>
@@ -275,10 +144,16 @@
         
         <dependency>        
             <groupId>eu.trentorise.opendata.semtext</groupId>
-            <artifactId>semtext</artifactId>
-            <version>0.27.0-SNAPSHOT</version>
+            <artifactId>semtext</artifactId>            
         </dependency>        
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
         
+                        
     </dependencies>
     
     <reporting>
