--- a/pom.xml
+++ b/pom.xml
@@ -32,13 +32,13 @@
 
 
     <parent>
-        <groupId>eu.trentorise.opendata.commons</groupId>
-        <artifactId>odt-super-pom</artifactId>
-        <version>1.3.0-SNAPSHOT</version>
+        <groupId>eu.trentorise.opendata</groupId>
+        <artifactId>tod-super-pom</artifactId>
+        <version>1.4.0-SNAPSHOT</version>
     </parent>  
 
 
-    <!-- better to copy scm, see https://github.com/opendatatrentino/odt-super-pom/issues/1 -->    
+    <!-- better to copy scm, see https://github.com/opendatatrentino/tod-super-pom/issues/1 -->    
     <scm>
         <url>${project.url}</url>
         <connection>scm:git:${project.url}.git</connection>
